--- a/src/global.css
+++ b/src/global.css
@@ -4,48 +4,36 @@
 
 @layer base {
   :root {
-    --background: #ffffff;
-    --foreground: #0a0a0a;
-    --card: #ffffff;
-    --card-foreground: #0a0a0a;
-    --popover: #ffffff;
-    --popover-foreground: #0a0a0a;
-    --primary: #3c4cc4;
-    --primary-foreground: #fef2f2;
-    --secondary: #f5f5f5;
-    --secondary-foreground: #171717;
-    --muted: #f5f5f5;
-    --muted-foreground: #737373;
-    --accent: #f5f5f5;
-    --accent-foreground: #171717;
-    --destructive: #ef4444;
-    --destructive-foreground: #fafafa;
-    --border: #e5e5e5;
-    --input: #e5e5e5;
-    --ring: #3c4cc4;
-    --radius: 0.5rem;
-  }
-
-  .dark {
     --background: #0a0a0a;
     --foreground: #fafafa;
+
+    --primary: #4d77ff;
+    --primary-foreground: #fef2f2;
+
+    --secondary: #f9e65d;
+    --secondary-foreground: #fafafa;
+
+    --tertiary: #5ee6eb;
+    --tertiary-foreground: #fafafa;
+
     --card: #0a0a0a;
     --card-foreground: #fafafa;
     --popover: #0a0a0a;
     --popover-foreground: #fafafa;
-    --primary: #3c4cc4;
-    --primary-foreground: #fef2f2;
-    --secondary: #262626;
-    --secondary-foreground: #fafafa;
+
     --muted: #262626;
     --muted-foreground: #a3a3a3;
+
     --accent: #262626;
     --accent-foreground: #fafafa;
+
     --destructive: #7f1d1d;
     --destructive-foreground: #fafafa;
+
     --border: #262626;
     --input: #262626;
     --ring: #3c4cc4;
+    --radius: 0.5rem;
   }
 }
 
