Ajustando paginas de auth

--- a/src/global.css
+++ b/src/global.css
@@ -40,6 +40,8 @@
 @layer base {
   * {
     @apply border-border;
+
+    font-family: "Roboto", sans-serif;
   }
   body {
     @apply bg-background text-foreground;
