--- a/src/global.css
+++ b/src/global.css
@@ -4,10 +4,10 @@
 
 @layer base {
   :root {
-    --background: #0a0a0a;
-    --foreground: #fafafa;
+    --background: #d1d5db;
+    --foreground: #0a0a0a;
 
-    --primary: #4d77ff;
+    --primary: #6300b3;
     --primary-foreground: #fef2f2;
 
     --secondary: #f9e65d;
@@ -16,13 +16,14 @@
     --tertiary: #5ee6eb;
     --tertiary-foreground: #fafafa;
 
-    --card: #0a0a0a;
+    --card: #f5eff9;
     --card-foreground: #fafafa;
-    --popover: #0a0a0a;
+
+    --popover: #222222;
     --popover-foreground: #fafafa;
 
     --muted: #262626;
-    --muted-foreground: #a3a3a3;
+    --muted-foreground: #545454;
 
     --accent: #262626;
     --accent-foreground: #fafafa;
